force-app/main/default/objects/Trigger_Type__c/Trigger_Type__c.object-meta.xml
<CustomObject>
    <label>Trigger Type</label>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>