force-app/main/default/objects/Trigger_Type__c/fields/Include_Contract_Margin__c.field-meta.xml
<CustomField>
    <fullName>Include_Contract_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Contract Margin</label>
    <type>Checkbox</type>
</CustomField>