force-app/main/default/objects/Trigger_Type__c/fields/Lock_Type__c.field-meta.xml
<CustomField>
    <fullName>Lock_Type__c</fullName>
    <label>Lock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lock_Type</valueSetName>
    </valueSet>
</CustomField>