force-app/main/default/objects/Trigger_Type__c/fields/Locks_Fin_Basis__c.field-meta.xml
<CustomField>
    <fullName>Locks_Fin_Basis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locks Fin Basis</label>
    <type>Checkbox</type>
</CustomField>