force-app/main/default/objects/Trigger_Type__c/fields/Locks_Nymex__c.field-meta.xml
<CustomField>
    <fullName>Locks_Nymex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locks Nymex</label>
    <type>Checkbox</type>
</CustomField>