force-app/main/default/objects/Trigger_Type__c/fields/Locks_Phy_Prem__c.field-meta.xml
<CustomField>
    <fullName>Locks_Phy_Prem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locks Phy Prem</label>
    <type>Checkbox</type>
</CustomField>