force-app/main/default/objects/Trigger_Type__c/fields/Trigger_Text__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Text__c</fullName>
    <formula>IF( Locks_Nymex__c &amp;&amp; Locks_Fin_Basis__c &amp;&amp; Locks_Phy_Prem__c, &quot;Fixed Price&quot;
  , IF(Locks_Nymex__c &amp;&amp; Locks_Fin_Basis__c, &quot;Fixed Price&quot;
      , IF(Locks_Fin_Basis__c &amp;&amp; Locks_Phy_Prem__c, &quot;Fixed Basis&quot;
          , IF(Locks_Fin_Basis__c, &quot;Fixed Basis&quot;
              , IF(Locks_Nymex__c, &quot;Fixed Commodity&quot;, &quot;&quot;)
            )
        )
    )
)</formula>
    <label>Trigger Text</label>
    <type>Text</type>
</CustomField>