force-app/main/default/objects/Trigger_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Include_Contract_Margin__c</columns>
    <columns>Locks_Fin_Basis__c</columns>
    <columns>Locks_Nymex__c</columns>
    <columns>Locks_Phy_Prem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>